#18 jooq visualizer queries